# brasserie-coo

./: README.md  tp_coo
brasserie/: db.sqlite3
brasserie/brewsim/high_level/: apps.py  tests.py  views.py
brasserie/brewsim/high_level/migrations/: 0001_initial.py  0002_machine_prix.py
brasserie/brewsim/low_level/: CMakeLists.txt  low_level.cpp  main.cpp
brasserie/config/: settings.py  urls.py
brasserie/mysite/brewsim/brewsim/: settings.py
brasserie/mysite/mysite/: settings.py
brewsim/: urls.py
high_level/: admin.py  models.py
mysite/brewsim/brewsim/: urls.py
mysite/mysite/: settings.py  urls.py
tp_coo-main/: tp_coo.pub
tp_coo-main/brewsim/: db.sqlite3
tp_coo-main/brewsim/high_level/: views.py
tp_coo-main/brewsim/high_level/migrations/: 0003_alter_prix_ingredient.py
tp_coo-main/brewsim/mysite/mysite/: urls.py
